tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_const_int64.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:int64 = 10l
x = 20l

